; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-netpack.c_find_uncomplete.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-netpack.c_find_uncomplete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uncomplete = type { %struct.uncomplete*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.queue = type { %struct.uncomplete** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.uncomplete* (%struct.queue*, i32)* @find_uncomplete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.uncomplete* @find_uncomplete(%struct.queue* %0, i32 %1) #0 {
  %3 = alloca %struct.uncomplete*, align 8
  %4 = alloca %struct.queue*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.uncomplete*, align 8
  %8 = alloca %struct.uncomplete*, align 8
  store %struct.queue* %0, %struct.queue** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.queue*, %struct.queue** %4, align 8
  %10 = icmp eq %struct.queue* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store %struct.uncomplete* null, %struct.uncomplete** %3, align 8
  br label %70

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @hash_fd(i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load %struct.queue*, %struct.queue** %4, align 8
  %16 = getelementptr inbounds %struct.queue, %struct.queue* %15, i32 0, i32 0
  %17 = load %struct.uncomplete**, %struct.uncomplete*** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.uncomplete*, %struct.uncomplete** %17, i64 %19
  %21 = load %struct.uncomplete*, %struct.uncomplete** %20, align 8
  store %struct.uncomplete* %21, %struct.uncomplete** %7, align 8
  %22 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %23 = icmp eq %struct.uncomplete* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %12
  store %struct.uncomplete* null, %struct.uncomplete** %3, align 8
  br label %70

25:                                               ; preds = %12
  %26 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %27 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = load i32, i32* %5, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %43

32:                                               ; preds = %25
  %33 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %34 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %33, i32 0, i32 0
  %35 = load %struct.uncomplete*, %struct.uncomplete** %34, align 8
  %36 = load %struct.queue*, %struct.queue** %4, align 8
  %37 = getelementptr inbounds %struct.queue, %struct.queue* %36, i32 0, i32 0
  %38 = load %struct.uncomplete**, %struct.uncomplete*** %37, align 8
  %39 = load i32, i32* %6, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds %struct.uncomplete*, %struct.uncomplete** %38, i64 %40
  store %struct.uncomplete* %35, %struct.uncomplete** %41, align 8
  %42 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  store %struct.uncomplete* %42, %struct.uncomplete** %3, align 8
  br label %70

43:                                               ; preds = %25
  %44 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  store %struct.uncomplete* %44, %struct.uncomplete** %8, align 8
  br label %45

45:                                               ; preds = %67, %43
  %46 = load %struct.uncomplete*, %struct.uncomplete** %8, align 8
  %47 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %46, i32 0, i32 0
  %48 = load %struct.uncomplete*, %struct.uncomplete** %47, align 8
  %49 = icmp ne %struct.uncomplete* %48, null
  br i1 %49, label %50, label %69

50:                                               ; preds = %45
  %51 = load %struct.uncomplete*, %struct.uncomplete** %8, align 8
  %52 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %51, i32 0, i32 0
  %53 = load %struct.uncomplete*, %struct.uncomplete** %52, align 8
  store %struct.uncomplete* %53, %struct.uncomplete** %7, align 8
  %54 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %55 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %54, i32 0, i32 1
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = load i32, i32* %5, align 4
  %59 = icmp eq i32 %57, %58
  br i1 %59, label %60, label %67

60:                                               ; preds = %50
  %61 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %62 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %61, i32 0, i32 0
  %63 = load %struct.uncomplete*, %struct.uncomplete** %62, align 8
  %64 = load %struct.uncomplete*, %struct.uncomplete** %8, align 8
  %65 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %64, i32 0, i32 0
  store %struct.uncomplete* %63, %struct.uncomplete** %65, align 8
  %66 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  store %struct.uncomplete* %66, %struct.uncomplete** %3, align 8
  br label %70

67:                                               ; preds = %50
  %68 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  store %struct.uncomplete* %68, %struct.uncomplete** %8, align 8
  br label %45

69:                                               ; preds = %45
  store %struct.uncomplete* null, %struct.uncomplete** %3, align 8
  br label %70

70:                                               ; preds = %69, %60, %32, %24, %11
  %71 = load %struct.uncomplete*, %struct.uncomplete** %3, align 8
  ret %struct.uncomplete* %71
}

declare dso_local i32 @hash_fd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
